--- a/infra/docker/nginx/default.conf
+++ b/infra/docker/nginx/default.conf
@@ -2,9 +2,9 @@ access_log /dev/stdout main;
 error_log /dev/stderr warn;
 
 server {
-    listen 80;
-    listen [::]:80;
+    listen 8008;
     root /workspace/public;
+    server_name localhost;
 
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-XSS-Protection "1; mode=block";
