--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,15 +31,25 @@ services:
       - DB_USERNAME=${DB_USERNAME:-phper}
       - DB_PASSWORD=${DB_PASSWORD:-secret}
 
+  https-portal:
+    image: steveltn/https-portal:1
+    ports:
+      - '80:80'
+      - '443:443'
+    restart: always
+    volumes:
+      - ./certs:/var/lib/https-portal
+    environment:
+      #FORE_RENEW: 'true'
+      DOMAINS: 'localhost -> http://web:8008'
+      STAGE: local
+
   web:
     build:
       context: .
       dockerfile: ./infra/docker/nginx/Dockerfile
     ports:
-      - target: 80
-        published: ${WEB_PUBLISHED_PORT:-80}
-        protocol: tcp
-        mode: host
+      - 8008:8008
     volumes:
       - type: bind
         source: ./src
