--- a/src/package.json
+++ b/src/package.json
@@ -9,6 +9,7 @@
         "@vitejs/plugin-react": "^2.0.0",
         "axios": "^1.1.2",
         "bootstrap": "^5.2.1",
+        "dotenv-cli": "^6.0.0",
         "laravel-vite-plugin": "^0.6.0",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
