--- a/infra/docker/nginx/default.conf
+++ b/infra/docker/nginx/default.conf
@@ -6,9 +6,9 @@ server {
     root /workspace/public;
     server_name localhost;
 
-    add_header X-Frame-Options "SAMEORIGIN";
-    add_header X-XSS-Protection "1; mode=block";
-    add_header X-Content-Type-Options "nosniff";
+    # add_header X-Frame-Options "SAMEORIGIN";
+    # add_header X-XSS-Protection "1; mode=block";
+    # add_header X-Content-Type-Options "nosniff";
 
     index index.php;
 
