--- a/src/package.json
+++ b/src/package.json
@@ -13,9 +13,17 @@
         "laravel-vite-plugin": "^0.6.0",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "sass": "^1.32.11",
         "vite": "^3.0.0"
+    },
+    "dependencies": {
+        "@types/react": "^18.0.25",
+        "@types/react-dom": "^18.0.8",
+        "@types/react-router": "^5.1.19",
+        "@types/react-router-dom": "^5.3.3",
+        "react-redux": "^8.0.5",
+        "react-router-dom": "^6.4.3"
     }
 }
